// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Link changes the class when hovered 1`] = `
<a
  className="normal"
  href="http://antfu.me"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <svg
    height={210}
    width={500}
  >
    <polygon
      points="100,10 40,198 190,78 10,78 160,198"
    />
  </svg>
  Anthony Fu
</a>
`;

exports[`Link changes the class when hovered 2`] = `
<a
  className="hovered"
  href="http://antfu.me"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <svg
    height={210}
    width={500}
  >
    <polygon
      points="100,10 40,198 190,78 10,78 160,198"
    />
  </svg>
  Anthony Fu
</a>
`;

exports[`Link changes the class when hovered 3`] = `
<a
  className="normal"
  href="http://antfu.me"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <svg
    height={210}
    width={500}
  >
    <polygon
      points="100,10 40,198 190,78 10,78 160,198"
    />
  </svg>
  Anthony Fu
</a>
`;
